style: fixed flex issues on mobile

--- a/src/scss/components/_body.scss
+++ b/src/scss/components/_body.scss
@@ -132,6 +132,7 @@
     @extend .flex;
     flex-wrap: wrap;
     gap: 0.5em;
+    justify-content: start;
   }
 
   @include max(small) {
